a few minor refactorings on search pipe - fixed overflow with global search results if they take up more than the screen height

--- a/TokuCinema/src/styles/components/nav/mobile.scss
+++ b/TokuCinema/src/styles/components/nav/mobile.scss
@@ -47,6 +47,7 @@
   height: 100%;
   width: 100%;
   top: 80px;
+  overflow: scroll;
   z-index: 1;
   background-color: $modal-background;
 }
@@ -102,5 +103,11 @@
 .nav-hamburger-menu, .nav-search-icon {
   svg {
     fill: $primary-foreground;
+  }
+}
+
+.result-lists-wrapper {
+  div:last-child {
+    margin-bottom: 100px;
   }
 }
